adjusted welcome nav on homepage

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -3,8 +3,20 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 /* Home */
+#active-promoters {
+  margin: 60px 0;
+}
 
+#latest-events {
+  margin: 60px 0;
+}
 
+#welcome-nav {
+  li a  {
+    font-size: 18px;
+    text-align: center;
+  }
+}
 
 
 
