homepage pretty good now

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,11 +2,12 @@
 
 			<div class="section-box">
 				<div id="welcome-nav" class="navbar">
-					<h3>
-					 Hi and Welcome!<br>
-					 <small>100 Motels exists to help independent musicians get out on tour</small>
-					</h3>
+					<h2 class="welcome-banner">
+					 Hi and Welcome to the 100 Motels demo site!<br>
+					 <small>100 Motels wants to exist so independent musicians can get out on tour without industry backing or paying to play.</small>
+					</h2>
 	  			<div class="navbar-inner">
+	  				<div class="label-box">What do you want to do?</div>
 						<ul class="nav">
 							<li class="span3">
 		    				<a href="#active-promoters">I want to tour my music</a>
@@ -22,7 +23,7 @@
 
 		<section id="latest-events">
 			<header>
-				<h3>Latest Shows</h3>
+				<h3>Latest Shows in your Locality</h3>
 			</header>
 			<div id="events-carousel" class="carousel slide">
 				<div id="events" class="carousel-inner">
@@ -30,16 +31,16 @@
 							<ul class="thumbnails">
 								<% @events.each do |event| %>
 								<li class="span4">
-									<a class="thumbnail" href="#">
-										<img src="http://placehold.it/360x240" alt="">
-									</a>
-									<h3 class="title"> <%= event.artist %></h3>
-									<p>
-										<%= event.venue %>
-										<%= event.date %>
-										<%= event.ticket_price %>
-										<%= button_to "Info & Tickets", event_path(event), method: :get, class: "btn" %>
-									</p>
+									<div class="thumbnail">
+										<img src="http://placehold.it/360x240&text=ArtistPic" alt="">
+										<div class="caption">
+											<h4 class="title">
+												<%= event.artist %>
+											</h4>
+											<p><%= event.venue %> on <%= time_tag event.date %></p>
+											<%= button_to "Info & Tickets", event_path(event), method: :get, class: "btn" %>
+										</div>
+									</div>
 								</li>
 								<% end %>
 							</ul>
@@ -52,16 +53,16 @@
 							<ul class="thumbnails">
 								<% @events.each do |event| %>
 								<li class="span4">
-									<a class="thumbnail" href="#">
-										<img src="http://placehold.it/360x240" alt="">
-									</a>
-									<h3 class="title"> <%= event.artist %></h3>
-									<p>
-										<%= event.venue %>
-										<%= event.date %>
-										<%= event.ticket_price %>
-										<%= button_to "Info & Tickets", event_path(event), method: :get, class: "btn" %>
-									</p>
+									<div class="thumbnail">
+										<img src="http://placehold.it/360x240&text=ArtistPic" alt="">
+										<div class="caption">
+											<h4 class="title">
+												<%= event.artist %>
+											</h4>
+											<p><%= event.venue %> on <%= time_tag event.date %></p>
+											<%= button_to "Info & Tickets", event_path(event), method: :get, class: "btn" %>
+										</div>
+									</div>
 								</li>
 								<% end %>
 							</ul>
@@ -74,7 +75,7 @@
 
 		<section id="active-promoters">
 			<header>
-				<h3>Most Active Promoters</h3>
+				<h3>Best and Fairest Show-makers</h3>
 			</header>
 			<div id="promoters-carousel" class="carousel slide">
 				<div id="promoters" class="carousel-inner">
@@ -82,19 +83,20 @@
 							<ul class="thumbnails">
 								<% @users.each do |user| %>
 								<li class="span3">
-									<a class="thumbnail" href="#">
-										<img src="http://placehold.it/360x240" alt="">
-									</a>
-									<h3 class="title"> Promoter Name</h3>
-									<p>
-										<%= button_to "Full Profile", user_path(user), method: :get %>
-									</p>
+									<div class="thumbnail">
+										<img src="http://placehold.it/360x240">
+										<div class="caption">
+											<h3 class="title"> Promoter Name</h3>
+											<h4>Location</h4>
+											<%= button_to "Full Profile", user_path(user), method: :get %>
+										</div>
+									</div>
 								</li>
 								<% end %>
 							</ul>
 						<div class="carousel-caption">
 							<h4>Our Volunteers...making it happen</h4>
-							<p>All of our promoter have a proven track record in supporting independent music</p>
+							<p>All of our promoters have a proven track record in supporting independent music</p>
 						</div>
 					</div>
 					<div class="item">
@@ -117,21 +119,23 @@
 				<a class="right carousel-control" href="#promoters-carousel" data-slide="next">›</a>
 			</div>
 
-
-			<section id="promoter-apply">
-				<div class="well well-large">
-					<h3>Looking to help?...Apply to become a Promoter</h3>
-					<blockquote>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</blockquote>
-					<button class="btn btn-large btn-primary">Sign up!</button>
+		<section id="promoter-apply">
+			<div class="well well-large">
+				<h3>Looking to put on Shows?...Apply to become a Full Member</h3>
+				<blockquote>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</blockquote>
+				<div class="btn-group">
+				  <button class="btn btn-large btn-primary">Sign up!</button>
+				  <button class="btn btn-large">More Info</button>
 				</div>
-			</section>
+			</div>
+		</section>
 	</div>
 
 
