--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -18,7 +18,16 @@
   }
 }
 
+.carousel-caption {
+  bottom: -10px;
+}
 
+.caption {
+  text-align: center;
+  margin-bottom: 20px;
+}
 
-
-
+.welcome-banner {
+  padding-bottom: 20px;
+  padding-top: -20px;
+}
