--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -32,31 +32,40 @@
 
 
 // Footer
-.footer-links {
-  margin-top: 20px;
-  li {
-    padding: 5px 0;
-  }
-}
 
 footer {
+  font-size: 14px;
   color: #666;
   background-color: #333;
-  min-height: 300px;
-  border-top: 4px solid black;
+  min-height: 275px;
+  border-top: 2px solid #222;
 }
 
-footer .footer_top {
-
+footer .footer-top {
   border-bottom: 1px solid #222;
   padding-bottom: 20px;
   padding-top: 20px;
-  height: 100px;
+
 }
 
-footer .footer_bottom {
+footer .footer-bottom {
   border-top: 1px solid #444;
   padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+footer dt, dd {
+  color: #0088CC;
+  padding: 5px 0;
+}
+
+footer img  {
+  padding: 0;
+  margin: 0;
+}
+
+.border-divider {
+  border-right: 1px solid #595959;
 }
 
 // Image text wrapping
@@ -77,3 +86,10 @@ footer .footer_bottom {
     margin-left: auto;
     margin-right: auto;
 }
+
+//social buttons
+
+#twitter-button  {
+  background: image-url("twitter.png")
+}
+
