added jquery locations script

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,10 @@
 
 		<section id="latest-events">
 			<header>
-				<h3>Latest Shows in your Locality</h3>
+				<h3>
+					Latest Shows in your Locality
+					<small id="geolocation"></small>
+				</h3>
 			</header>
 			<div id="events-carousel" class="carousel slide">
 				<div id="events" class="carousel-inner">
