--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
               <li class="active"><%= link_to "Home", root_path %></li>
               <li><%= link_to "Events", events_path %></li>
               <li><%= link_to "Users", users_path %></li>
-              <li><a href="#">Link</a></li>
+              <li><a href="#">Help</a></li>
               <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown">Cart (<%= cart_items(@cart) %>) <b class="caret"></b></a>
                 <ul class="dropdown-menu">
