--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -2,4 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-// Using this for email template css, may need to extract it
+// Using this for email template css, may need to extract it4
+
+
+
+// Order show
+
+#promoters-message {
+  padding: 20px 10px;
+}
