--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,30 +1,53 @@
-<header>
-	<h2>Thanks <%= @order.name %>!...</h2>
-	<p>We've sent an email to you with your tickets and order details, enjoy the show.</p>
-</header>
+<div class="container">
+	<div class="row">
+		<div class="span12">
+			<header>
+				<h2>Thanks <%= @order.name %>!... <br>
+					<small>Your payment was successful. We've sent an email with your tickets and receipt, enjoy the show.</small>
+				</h2>
+			</header>
+			<section id="order-summary" class="section-box">
+				<div class="label-box">Your Order Details</div>
+					<%= render 'order' %>
+			</section>
+		</div>
+	</div>
 
-<section id="order-summary">
-	<header> <h3>Order Details</h3> </header>
-	<%= render 'order' %>
-</section>
-
-<section>
-	<header> 
-		<h3>Payment Details</h3> 
-	</header>
-	<p>Name on Card: Seo Cahill</p> 
-	<p>Last 4 digits: #5456 </p> 
-	<p>Zip Code: 541154</p> 
-	<p>Payment for $34 received thanks!</p>
-</section>
-
-<section id="promoters-message">
-	<h3>Some guidelines for the night...</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	</p>
-</section>
+	<div class="row">
+		<div class="span4">
+			<section class="section-box">
+				<div class="label-box">Payment Details</div>
+					<dl class="dl-horizontal well">
+						<dt>Name on Card: </dt>
+						<dd><%= @order.name %></dd>
+						<dt>Last 4 Digits: </dt>
+						<dd>5656</dd>
+						<dt>Zip Code: </dt>
+						<dd>CA 94115</dd>
+						<dt>Total Paid</dt>
+						<dd>$11.00</dd>
+					</dl>
+			</section>
+		</div>
+		<div class="span8">
+			<section id="promoters-message">
+				<h3>Coming to the Show...</h3>
+				<p class="l">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+			</section>
+		</div>
+	</div>
+</div>
