--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -31,7 +31,7 @@
 		</div>
 		<div class="span8">
 			<section id="promoters-message">
-				<h3>Coming to the Show...</h3>
+				<h3>Before you arrive at the Show...</h3>
 				<p class="l">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
