--- a/app/assets/stylesheets/notifier.css.scss
+++ b/app/assets/stylesheets/notifier.css.scss
@@ -1,29 +1,29 @@
 // Using a separate stylesheet for use with Roady gem
 
 // Main Box
-.section-box {
+
+
+// Admits box number
+
+#admits-box {
+  text-align: center;
+  padding: 15px;
+  margin-top: 25px;
+}
+
+.ticket {
+  img {
+    margin: 15px 45px;
+  }
+}
+
+.ticket-box {
   position: relative;
   margin: 25px 0;
-  padding: 14px;
+  padding: 15px;
   background-color: #fff;
   border: 1px solid #ddd;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
-}
-
-.section-box .label-box {
-  // content: "Promoter Info";
-  position: absolute;
-  top: -1px;
-  left: -1px;
-  padding: 3px 7px;
-  font-size: 16px;
-  font-weight: bold;
-  background-color: #f5f5f5;
-  border: 1px solid #ddd;
-  color: #9da0a4;
-  -webkit-border-radius: 4px 0 4px 0;
-     -moz-border-radius: 4px 0 4px 0;
-          border-radius: 4px 0 4px 0;
 }
