added stripe gem

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,3 +1,4 @@
-<h2>Enter your payment information below</h2>
-
-<%= render "form" %>
+<div class="container">
+  <h2>Enter your payment information below</h2>
+  <%= render "form" %>
+</div>
