--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,9 +1,6 @@
-<%= error_messages_for :order %>
 
-<%= form_for @order do |f| %>
-  <%= f.label :name, "Name" %>
-  <%= f.text_field :name %>
-  <%= f.label :email, "Email" %>
-  <%= f.email_field :email %>
-  <%= f.submit "Place Order", :disable_with => 'Submit Ordering...' %>
-<% end %>
+  <%= simple_form_for @order do |f| %>
+    <%= f.input :name %>
+    <%= f.input :email %>
+    <%= f.submit "Place Order"%>
+  <% end %>
