--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -2,6 +2,7 @@
   <%= simple_form_for @order do |f| %>
     <%= f.input :name %>
     <%= f.input :email %>
+    <%= f.input :stripe_card_token, as: :hidden %>
 
     <%= label_tag :card_number, "Credit Card Number" %>
     <%= text_field_tag :card_number, nil, name: nil %>
@@ -13,10 +14,16 @@
     <%= select_month nil, {add_month_numbers: true}, {name: nil, id: "card_month"} %>
     <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year"} %>
 
+    <div class="control-group error">
+      <div id="stripe-error" >
+          <noscript>JavaScript is not enabled and is required for this form. First enable it in your web browser settings.</noscript>
+      </div>
+    </div>
+
     <div class="actions">
-      <button type="submit" class="submit-button">Submit Payment</button>
+      <button type="submit" class="btn btn-primary">Submit Payment</button>
       <%#= f.submit "Place Order", class: 'btn btn-primary' %>
-      <%#= submit_tag 'Cancel', :type => :reset, :class => "btn btn-danger" %>
+      <%= submit_tag 'Cancel', :type => :reset, :class => "btn btn-danger" %>
     </div>
   <% end %>
   <div id="stripe_error">
