stripe working leaving for now, however work to be done on passing the total, recognizining a member, testing etc

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,19 +1,23 @@
 
   <%= simple_form_for @order do |f| %>
-    <%= f.input :name %>
-    <%= f.input :email %>
+    <%= f.input :name, input_html: {value: "Foo Man"} %>
+    <%= f.input :email, input_html: {value: "fooman@creteboom.com"} %>
+    <%= f.input :plan, as: :hidden, input_html: {value: "APSUB"} %>
     <%= f.input :stripe_card_token, as: :hidden %>
 
-    <%= label_tag :card_number, "Credit Card Number" %>
-    <%= text_field_tag :card_number, nil, name: nil %>
+    <% if @order.stripe_card_token %>
+      Credit Card has been provided
+    <% else %>
+      <%= label_tag :card_number, "Credit Card Number" %>
+      <%= text_field_tag :card_number, 4242424242424242, name: nil %>
 
-    <%= label_tag :card_code, "Security Code on Card (CVV)" %>
-    <%= text_field_tag :card_code, nil, name: nil %>
+      <%= label_tag :card_code, "Security Code on Card (CVV)" %>
+      <%= text_field_tag :card_code, 123, name: nil %>
 
-    <%= label_tag :card_month, "Card Expiration" %>
-    <%= select_month nil, {add_month_numbers: true}, {name: nil, id: "card_month"} %>
-    <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year"} %>
-
+      <%= label_tag :card_month, "Card Expiration" %>
+      <%= select_month 1, {add_month_numbers: true}, {name: nil, id: "card_month"} %>
+      <%= select_year 2015, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year"} %>
+    <% end %>
     <div class="control-group error">
       <div id="stripe-error" >
           <noscript>JavaScript is not enabled and is required for this form. First enable it in your web browser settings.</noscript>
