added some dev varibles and mailer stuff

--- a/app/views/notifier/order_processed.html.erb
+++ b/app/views/notifier/order_processed.html.erb
@@ -1,4 +1,6 @@
-<%= stylesheet_link_tag "notifier", "bootstrap_custom", :media => "all" %>
+<link href="/assets/notifier.css?body=1" media="all" rel="stylesheet" type="text/css" />
+<link href="/assets/bootstrap_custom.css?body=1" media="all" rel="stylesheet" type="text/css" />
+<%#= stylesheet_link_tag "notifier", "bootstrap_custom", :media => "all" %>
 <div class="container">
 	<h2>
 		<%= @greeting %> Here's your receipt and your tickets...
