changed to application.scss and update tb sass gem

--- a/app/assets/stylesheets/bootstrap_custom.css.scss
+++ b/app/assets/stylesheets/bootstrap_custom.css.scss
@@ -5,8 +5,8 @@
 
 // import bootstrap stylesheets
 
-@import "bootstrap";
-@import "bootstrap-responsive";
+// @import "bootstrap";
+// @import "bootstrap-responsive";
 
 // Override bootstap values here
 
