--- a/app/assets/stylesheets/bootstrap_custom.css.scss
+++ b/app/assets/stylesheets/bootstrap_custom.css.scss
@@ -1,15 +1,3 @@
-// Change bootstrap defaults here
+@import "bootstrap";
+@import "bootstrap-responsive";
 
-// $navbarBackground: #FF3A3C;
-// $navbarLinkColor: #eee;
-
-// import bootstrap stylesheets
-
-// @import "bootstrap";
-// @import "bootstrap-responsive";
-
-// Override bootstap values here
-
-body {
-  // padding-top: 60px;
-}
