--- a/app/views/notifier/order_processed.html.erb
+++ b/app/views/notifier/order_processed.html.erb
@@ -1,49 +1,17 @@
-<div class="container">
-	<h2>
-		<%= @greeting %> Here's your receipt and your tickets...
-	</h2>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-	<% @order.line_items.each do |l| %>
-		<section class="ticket ticket-box">
-			<div class="row">
-				<div class="span2">
-					<img src="//placehold.it/170&text=QR+code">
-				</div>
-				<div class="span4 offset2">
-					<header>
-						<h1>
-							<small>100 Motels Presents!</small> <br>
-							<%= l.event.artist %>
-						</h1>
-						<h5>
-							live in <%=l.event.venue %> on <%= time_tag l.event.date %>
-						</h5>
-						<h3>
-							Doors at <%= l.event.doors.strftime("%l:%M %p") %>
-						</h3>
-					</header>
-				</div>
-				<div class="span2 offset1">
-					<div id="admits-box" class="well">
-						<p>Admit</p>
-						<h1><%= pluralize(l.quantity, "Person") %></h1>
-						<p></p>
-					</div>
-				</div>
-			</div>
-		</section>
-	<% end %>
-
-	<section class="ticket-box">
-		<div class="row">
-			<div class="span8">
-				<h3>Your order</h3>
-				<%= render 'orders/order' %>
-			</div>
-			<div class="span3">
-				<h3>Your receipt</h3>
-				<%= render 'orders/payment' %>
-			</div>
-		</div>
-	</section>
-</div>
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	</head>
+	<body>
+		<table cellpadding="0" cellspacing="0" border="0" id="backgroundTable">
+			<tr>
+				<td>
+					<%= render 'html_email' %>
+				</td>
+			</tr>
+		</table>
+	</body>
+</html>
