--- a/app/views/notifier/order_processed.html.erb
+++ b/app/views/notifier/order_processed.html.erb
@@ -9,7 +9,10 @@
 		<table cellpadding="0" cellspacing="0" border="0" id="backgroundTable">
 			<tr>
 				<td>
-					<%= render 'html_email' %>
+					<table width="600px" cellpadding="10" cellspacing="10" align="center" id="email-table">
+						<tr>
+							<td><%= render 'html_email' %></td>
+						</tr>
 				</td>
 			</tr>
 		</table>
